--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,130 @@
-.App {
-  text-align: center;
+body {
+    text-align: center;
+    background-color: #f9f9f9;
+    color: rgba(0, 0, 0, 0.87);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.app {
+    padding: 30px 20px;
+    /*width: auto;*/
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+label {
+    font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.required {
+    color: #ff0000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+hr {
+    border: 1px solid rgba(0,0,0,0.12);
+    margin: 30px 0;
+}
+
+.form .form-group,
+.form .option-group {
+    margin: 0 0 20px;
+    text-align: left;
+}
+
+.form .form-group label {
+    display: block;
+    margin: 0;
+    padding: 10px 0 10px 21px;
+}
+
+.form .form-group input:focus,
+.form .form-group textarea:focus {
+    border: 1px solid #2196f3;
+}
+
+.form .form-group input,
+.form .form-group textarea {
+    width: calc(100% - 40px);
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 14px;
+    margin: 0;
+}
+
+.form .form-group textarea {
+    line-height: 30px;
+    min-height: 150px;
+    resize: vertical;
+    white-space: pre;
+}
+
+.form .form-group button {
+    background-color: #1976d2;
+    color: #ffffff;
+    width: 100%;
+    padding: 10px 20px;
+    border: 1px solid #1565c0;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.form .form-group button:hover {
+    background-color: #1e88e5;
+}
+
+.form .form-group button:active {
+    background-color: #0d47a1;
+}
+
+.form .form-group p {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.54);
+    margin: 10px;
+    padding: 0px 12px;
+}
+
+.form .option-group input {
+    margin: 0;
+}
+
+.form .option-group label.checkbox-label {
+    margin: 0;
+    padding: 0 0 5px 5px;
+    position: relative;
+    left: 0;
+    top: -3px;
+}
+
+.output {
+    margin: 0;
+}
+
+.output h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.output p {
+    background-color: #cfd8dc;
+    padding: 20px;
+    text-align: left;
+    font-family: "Courier New";
+    color: rgba(0,0,0,0.6);
+}
+
+.form .error {
+    color: #ffffff;
+    background-color: #f44336;
+    border: 1px solid #b71c1c;
+    border-radius: 6px;
+    margin: 5px 0 20px;
+    padding: 16px 20px;
+    text-align: left;
+}
+
+@media (min-width: 800px){
+    .app {
+        width: 700px;
+        margin: auto;
+    }
 }
