Updated functions. Fixed bugs

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ label {
 }
 
 hr {
-    border: 1px solid rgba(0,0,0,0.12);
+    border: 1px solid rgba(0, 0, 0, 0.12);
     margin: 30px 0;
 }
 
@@ -61,23 +61,31 @@ hr {
     white-space: pre;
 }
 
-.form .form-group button {
-    background-color: #1976d2;
+.form .form-group button,
+.packages button,
+.packages .all button {
     color: #ffffff;
-    width: 100%;
     padding: 10px 20px;
-    border: 1px solid #1565c0;
     border-radius: 6px;
     cursor: pointer;
     font-size: 16px;
 }
 
+.form .form-group button {
+    background-color: #388e3c;
+    width: 100%;
+    border: 1px solid #2e7d32;
+    font-size: 30px;
+    padding: 20px;
+    text-transform: uppercase;
+}
+
 .form .form-group button:hover {
-    background-color: #1e88e5;
+    background-color: #43a047;
 }
 
 .form .form-group button:active {
-    background-color: #0d47a1;
+    background-color: #1b5e20;
 }
 
 .form .form-group p {
@@ -97,6 +105,39 @@ hr {
     position: relative;
     left: 0;
     top: -3px;
+}
+
+.packages button {
+    background-color: #1976d2;
+    border: 1px solid #1565c0;
+    width: auto;
+    margin: 5px 10px;
+}
+
+.packages button:hover {
+    background-color: #1e88e5;
+}
+
+.packages button:active {
+    background-color: #0d47a1;
+}
+
+.packages .all button {
+    background-color: #d32f2f;
+    border: 1px solid #c62828;
+    margin: 20px 5px 5px;
+    width: 100%;
+    font-size: 22px;
+    padding: 12px;
+    text-transform: uppercase;
+}
+
+.packages .all button:hover {
+    background-color: #e53935;
+}
+
+.packages .all button:active {
+    background-color: #b71c1c;
 }
 
 .output {
@@ -124,7 +165,7 @@ hr {
     padding: 20px;
     text-align: left;
     font-family: "Courier New";
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     overflow-x: scroll;
     margin-top: 20px;
 }
@@ -143,7 +184,7 @@ hr {
     text-align: left;
 }
 
-@media (min-width: 800px){
+@media (min-width: 800px) {
     .app {
         width: 700px;
         margin: auto;
